[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/ui/play_button/play1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/ui/play_button/play2.png" type="Texture" id=3]
[ext_resource path="res://Fonts/heartbit2x.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sprites/ui/slider.png" type="Texture" id=5]
[ext_resource path="res://Sprites/ui/slider_content.png" type="Texture" id=6]
[ext_resource path="res://Sprites/ui/slider_arrow2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/ui/slider_arrow1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/ui/test_button/test_button1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/ui/test_button/test_button2.png" type="Texture" id=10]
[ext_resource path="res://Sounds/bell_ding.ogg" type="AudioStream" id=11]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 16 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 16, 16 )
expand_margin_right = 8.0

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Start_Button" type="TextureButton" parent="."]
margin_left = 100.0
margin_top = 65.0
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="."]
margin_left = 256.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 24.0
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 8 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 2 )
max_value = 1.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 216.0
margin_top = 8.0
margin_right = 256.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "sound"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 96.8909
margin_top = 141.631
margin_right = 232.891
margin_bottom = 155.631
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "controls: arrows/wasd"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 102.482
margin_top = 120.44
margin_right = 238.482
margin_bottom = 134.44
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "4 Lanes"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 95.1091
margin_top = 156.184
margin_right = 231.109
margin_bottom = 170.184
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "quit: esc"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 178.354
margin_top = 162.725
margin_right = 314.354
margin_bottom = 176.725
size_flags_horizontal = 5
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "by Demonbane"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 128.452
margin_top = 118.595
margin_right = 152.452
margin_bottom = 142.595
rect_scale = Vector2( 0.75, 0.75 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 259.728
margin_top = 24.712
margin_right = 307.728
margin_bottom = 42.712
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="TextureButton"]
stream = ExtResource( 11 )
[connection signal="button_down" from="Start_Button" to="." method="_on_Start_Button_button_down"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
